--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "glob-stream": "^8.0.0",
     "map-stream": "^0.0.7",
     "vinyl-fs": "^4.0.0"
   }
